<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_events"
        android:enabled="true"
        android:icon="@drawable/ic_report_problem"
        android:title="@string/tab_events"
        app:contentDescription="@string/tab_events" />

    <item
        android:id="@+id/navigation_watch_zone"
        android:icon="@drawable/ic_watch_zone"
        android:enabled="true"
        android:title="@string/tab_WZ"
        app:contentDescription="@string/tab_WZ" />

    <item
        android:id="@+id/navigation_help"
        android:icon="@drawable/ic_help_white"
        android:title="@string/tab_help"
        android:enabled="true"
        app:contentDescription="@string/tab_help" />

</menu>
