<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.redhelmet.alert2me.ui.help.HelpViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_normal">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher_big"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.redhelmet.alert2me.ui.widget.HelpItemView
                android:id="@+id/item_help_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                app:description="@{viewModel.userModel.profileString}"
                android:onClick="@{v -> viewModel.onUserProfileClick()}"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo"
                app:title="@string/help_profile_title" />

            <com.redhelmet.alert2me.ui.widget.HelpItemView
                android:id="@+id/item_help_support"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:description="@string/help_support_desc"
                android:layout_marginTop="@dimen/margin_large"
                android:onClick="@{v -> viewModel.onSupportClick()}"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/item_help_profile"
                app:title="@string/help_support_title" />

            <com.redhelmet.alert2me.ui.widget.HelpItemView
                android:id="@+id/item_help_legal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:description="@string/help_legal_desc"
                android:layout_marginTop="@dimen/margin_large"
                android:onClick="@{v -> viewModel.onLegalClick()}"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/item_help_support"
                app:title="@string/help_legal_title" />

            <com.redhelmet.alert2me.ui.widget.HelpItemView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/item_help_version"
                app:description="@{viewModel.versionString}"
                app:showArrow="false"
                android:layout_marginTop="@dimen/margin_large"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/item_help_legal"
                app:title="@string/help_version" />

            <com.redhelmet.alert2me.ui.widget.HelpItemView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/item_help_code"
                bind:supportCode="@{viewModel.userModel.supportCode}"
                app:showArrow="false"
                android:layout_marginTop="@dimen/margin_large"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/item_help_version"
                app:title="@string/help_support_code_title" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/margin_normal" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/margin_normal" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>