<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:background="@drawable/hint4"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/progressBar2"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorRed"
        style="?android:attr/progressBarStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="19dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="21dp"
        android:layout_marginEnd="21dp" />

    <TextView
        android:id="@+id/termsCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_and_conditions"
        android:textSize="18sp"

        android:textColor="@color/colorWhite"

        android:layout_marginBottom="15dp"
        android:layout_above="@+id/replayHint"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/termsAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/termsAndCondition"
        android:layout_marginBottom="26dp"


        android:layout_centerHorizontal="true"
        android:layout_above="@+id/termsCondition"
      />

    <TextView
        android:id="@+id/replayHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/replay_hints"
        android:textSize="18sp"

        android:textColor="@color/colorWhite"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp" />

</RelativeLayout>