<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.phuocbui.mvvm.ui.signin.RegisterViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorBackgroundFloating">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_normal"
            android:paddingEnd="@dimen/margin_normal">

            <TextView
                android:id="@+id/title"
                style="@style/TextAppearance.MVVMDemo.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/register_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MVVMDemo.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="@string/login_email_hint"
                bind:errorText="@{viewModel.emailNotValidError}"
                app:layout_constraintTop_toBottomOf="@+id/title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_input_email"
                    style="@style/TextAppearance.MVVMDemo.TextInputLayout.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_login_email"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.userModel.userEmail}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout1"
                style="@style/Widget.MVVMDemo.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="@string/register_first_name_hint"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_input_first_name"
                    style="@style/TextAppearance.MVVMDemo.TextInputLayout.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_register_username"
                    android:text="@={viewModel.userModel.firstName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                style="@style/Widget.MVVMDemo.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="@string/register_surname_hint"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_input_surname"
                    style="@style/TextAppearance.MVVMDemo.TextInputLayout.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_register_username"
                    android:text="@={viewModel.userModel.surname}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                style="@style/Widget.MVVMDemo.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="@string/register_postcode_hint"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_input_postcode"
                    style="@style/TextAppearance.MVVMDemo.TextInputLayout.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_register_postcode"
                    android:inputType="number"
                    android:text="@={viewModel.userModel.postcode}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout4"
                style="@style/Widget.MVVMDemo.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="@string/login_password_hint"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_input_password"
                    style="@style/TextAppearance.MVVMDemo.TextInputLayout.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_login_password"
                    android:inputType="textPassword"
                    android:text="@={viewModel.userModel.password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout5"
                style="@style/Widget.MVVMDemo.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="@string/register_repeat_password_hint"
                bind:errorText="@{viewModel.passwordNotMatchesError}"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_input_repeat_password"
                    style="@style/TextAppearance.MVVMDemo.TextInputLayout.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_login_password"
                    android:inputType="textPassword"
                    android:text="@={viewModel.userModel.repeatPassword}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                style="@style/Widget.MVVMDemo.Button"
                android:layout_width="@dimen/login_button_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:enabled="@{viewModel.enableButton}"
                android:onClick="@{() -> viewModel.onRegisterClick()}"
                android:text="@string/register_button_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />

            <TextView
                android:id="@+id/txt_have_account"
                style="@style/TextAppearance.MVVMDemo.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:textColor="?attr/colorAccent"
                android:text="@string/register_have_account_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_register" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sign_in"
                style="@style/Widget.MVVMDemo.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onSignInClick()}"
                android:text="@string/register_sign_in_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_have_account" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>